2008-05-16  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Steve.

        Print out pending unload event count. Also print out main frame name to match Mac.         

        * DumpRenderTree/win/FrameLoadDelegate.cpp:
        (descriptionSuitableForTestResult):
        (FrameLoadDelegate::didFinishDocumentLoadForFrame):

2008-05-16  Timothy Hatcher  <timothy@apple.com>

        Remove the Drosera project, code and resources since it has been
        replaced with the Web Inspector's debugger. Removes references to
        Drosera in various scripts and makefiles.

        Rubber-stamped by Mark Rowe.

        * BuildSlaveSupport/build-launcher-app:
        * Drosera/DebuggerDocument.cpp: Removed.
        * Drosera/DebuggerDocument.h: Removed.
        * Drosera/Drosera.icns: Removed.
        * Drosera/DroseraWin.make: Removed.
        * Drosera/English.lproj/Debugger.nib/classes.nib: Removed.
        * Drosera/English.lproj/Debugger.nib/info.nib: Removed.
        * Drosera/English.lproj/Debugger.nib/keyedobjects.nib: Removed.
        * Drosera/English.lproj/MainMenu.nib/classes.nib: Removed.
        * Drosera/English.lproj/MainMenu.nib/info.nib: Removed.
        * Drosera/English.lproj/MainMenu.nib/keyedobjects.nib: Removed.
        * Drosera/ForwardingHeaders/wtf/Assertions.h: Removed.
        * Drosera/ForwardingHeaders/wtf/HashTraits.h: Removed.
        * Drosera/ForwardingHeaders/wtf/Noncopyable.h: Removed.
        * Drosera/ForwardingHeaders/wtf/OwnPtr.h: Removed.
        * Drosera/ForwardingHeaders/wtf/Platform.h: Removed.
        * Drosera/ForwardingHeaders/wtf/RetainPtr.h: Removed.
        * Drosera/Images/Drosera.ico: Removed.
        * Drosera/Images/SourceArrow.png: Removed.
        * Drosera/Images/SourceArrowBlank.png: Removed.
        * Drosera/Images/SourceArrowOpen.png: Removed.
        * Drosera/Images/background_stripe.png: Removed.
        * Drosera/Images/breakPoint.tif: Removed.